# dwarfIndi

./: .gitignore  gen_pb2.sh  pyproject.toml
indi/: README.md  config.ini  connection.py  indi_device.py  indi_dwarf.py  indi_dwarf_sk.xml  install_indi_drivers.py
src/dwarf_alpaca/config/: settings.py
src/dwarf_alpaca/devices/: camera.py  telescope.py
src/dwarf_alpaca/dwarf/: ftp_client.py  http_client.py  session.py
src/dwarf_alpaca/gui/: app.py  server.py
src/dwarf_alpaca/management/: router.py
src/dwarf_alpaca/proto/: dwarf_messages.py
tests/: test_management_devices.py  test_session_camera.py  test_session_config.py  test_session_focuser.py  test_telescope_endpoints.py
