[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dwarf-alpaca"
version = "0.1.0"
description = "ASCOM Alpaca server exposing a DWARF 3 telescope as Telescope/0, Camera/0, and Focuser/0 devices."
readme = "README.md"
authors = [
  { name = "Astro Tools" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.118.2",
  "uvicorn[standard]>=0.37.0",
  "alpyca>=3.1.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.11.0",
  "structlog>=25.4.0",
  "bleak>=1.1.1",
  "aiortc>=1.13.0",
  "av",
  "numpy>=2.3.3",
  "opencv-python-headless",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "protobuf>=6,<8",
  "websockets>=15.0.1",
  "PySide6>=6.10.0"
]

[project.optional-dependencies]
development = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "httpx[cli]>=0.28.1",
  "ruff>=0.14.0"
]

[project.scripts]
dwarf-alpaca = "dwarf_alpaca.cli:main"
dwarf-alpaca-gui = "dwarf_alpaca.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dwarf_alpaca"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:google.protobuf.internal.well_known_types",
]
